Closed
Bug 1632815
Opened 5 years ago
Closed 5 years ago
Crash in [@ mozilla::BasePrincipal::IsThirdPartyPrincipal]
Categories
(Core :: Privacy: Anti-Tracking, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla77
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox75 | --- | unaffected |
| firefox76 | --- | unaffected |
| firefox77 | --- | fixed |
People
(Reporter: jan, Assigned: dimi)
References
(Regression)
Details
(Keywords: crash, nightly-community, regression)
Crash Data
Attachments
(1 file)
Could this have been caused by latest changes to BasePrincipal.cpp?
https://hg.mozilla.org/mozilla-central/log/ff7eec7be698cd21d92755d709e08897100fa9c8/caps/BasePrincipal.cpp
I clicked on a link, wanted to go back and got a tab crash.
This bug is for crash report bp-802217ec-37fb-4666-9f63-361730200424.
Top 10 frames of crashing thread:
0 libxul.so mozilla::BasePrincipal::IsThirdPartyPrincipal caps/BasePrincipal.cpp:480
1 libxul.so mozilla::ContentBlocking::AllowAccessFor toolkit/components/antitracking/ContentBlocking.cpp:324
2 libxul.so mozilla::dom::Document::MaybeAllowStorageForOpenerAfterUserInteraction dom/base/Document.cpp:15140
3 libxul.so mozilla::dom::Document::SetUserHasInteracted dom/base/Document.cpp:14980
4 libxul.so mozilla::EventStateManager::PreHandleEvent dom/events/EventStateManager.cpp:508
5 libxul.so mozilla::PresShell::EventHandler::DispatchEvent layout/base/PresShell.cpp:7919
6 libxul.so mozilla::PresShell::EventHandler::HandleEventWithCurrentEventInfo layout/base/PresShell.cpp:7888
7 libxul.so mozilla::PresShell::EventHandler::HandleEventWithTarget layout/base/PresShell.cpp:7796
8 libxul.so mozilla::PresShell::HandleEventWithTarget layout/base/PresShell.h:650
9 libxul.so mozilla::PointerEventHandler::DispatchPointerFromMouseOrTouch dom/events/PointerEventHandler.cpp:523
| Reporter | ||
Comment 1•5 years ago
•
|
||
1 libxul.so mozilla::ContentBlocking::AllowAccessFor toolkit/components/antitracking/ContentBlocking.cpp:324
This file was changed by bug 1616775 yesterday. I'm using Fission and my build 20200423214309 is the first that has these changes.
Updated•5 years ago
|
Has Regression Range: --- → yes
| Assignee | ||
Comment 2•5 years ago
|
||
Updated•5 years ago
|
Assignee: nobody → dlee
Status: NEW → ASSIGNED
Pushed by dlee@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a537b565801d
Check IsThirdPartyPrincipal only when we have an in-process browsing context r=timhuang
| Assignee | ||
Updated•5 years ago
|
Flags: needinfo?(dlee)
Updated•5 years ago
|
Priority: -- → P1
Comment 4•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
Comment 5•5 years ago
|
||
Is there anything QA can do here?If yes, could you please provide STR to verify this issue?
Flags: needinfo?(jan)
| Reporter | ||
Updated•5 years ago
|
Has STR: --- → no
Flags: needinfo?(jan)
You need to log in
before you can comment on or make changes to this bug.
Description
•