Bug 1632815 - Check IsThirdPartyPrincipal only when we have an in-process browsing context r=timhuang

Differential Revision: https://phabricator.services.mozilla.com/D72377